FrostWire 2.2.5 build 656 - OCT/09/2020
 - com.mopub:mopub-sdk-banner:5.12.0 -> 5.14.0
 - com.applovin:applovin-sdk:9.13.1 -> 9.14.4
 - material 1.3.0-alpha02 -> 1.3.0-alpha03
 - browser 1.3.0-alpha05 -> 1.3.0->alpha06
 - exifinterface 1.2.0 -> 1.3.0
 - play-services 19.3.0 -> 19.4.0
 - core-ktx 1.3.1 -> 1.3.2
 - com.android.tools.build:gradle:4.0.1 -> 4.0.2

FrostWire 2.2.4 build 654 - SEP/24/2020
 - New jlibtorrent 1.2.10.0 update
 - Fixes bug where frostclick promo slide would render twice
 - dev: buildToolsVersion '29.0.2' -> '29.0.3' (@TacoTheDank)
 - Archive search Json parsing deprecation fix (@TacoTheDank)
 - com.squareup.okhttp3:okhttp:4.8.1 -> 4.9.0
 - lt: improve stat_file() performance on Windows
 - lt: fix issue with loading invalid torrents with only 0-sized files
 - lt: fix to avoid large stack allocations
 - lt: add macro TORRENT_CXX11_ABI for clients building with C++14 against
   libtorrent build with C++11
 - lt: removed deprecated wstring overloads on non-windows systems
 - lt: drop dependency on Unicode's ConvertUTF code (which had a license
   incompatible with Debian)
 - lt: fix bugs exposed on big-endian systems`
 - lt: fix detection of hard-links not being supported by filesystem
 - lt: fixed resume data regression for seeds with prio 0 files
 - binaries: compiler upgraded from g++-5 to g++-7
 - reverted to com.mopub:mopub-sdk-banner:5.12.0 (mopub 5.13.1 very unstable)

FrostWire 2.2.3 build 649 - AUG/23/2020
 - jlibtorrent 1.2.7.0 -> 1.2.8.0 update
 - com.squareup.okhttp3:okhttp:4.4.1 -> 4.8.1
 - com.mopub:mopub-sdk-banner:5.12.0 -> 5.13.1
 - androidx.browser:browser:1.3.0-alpha04 -> 1.3.0-alpha05
 - com.google.re2j:re2j:1.3 -> 1.4
 - com.google.android.material:material:1.3.0-alpha01 -> 1.3.0-alpha02
 - com.google.android.gms:play-services-ads:19.2.0 -> 19.3.0
 - com.applovin:applovin-sdk:9.12.6 -> 9.13.1
 - com.unity3d.ads:unity-ads:3.4.2 -> 3.4.6
 - 1337 search fixed
 - SC search fixed

FrostWire 2.2.2 build 646 - AUG/01/2020