@@ -1,4 +1,5 @@
 FrostWire 2.2.5 build 656 - OCT/09/2020
+ - New: Firebase Crash Analytics support
  - com.mopub:mopub-sdk-banner:5.12.0 -> 5.14.0
  - com.applovin:applovin-sdk:9.13.1 -> 9.14.4
  - material 1.3.0-alpha02 -> 1.3.0-alpha03
